--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 			<li>
 				<a href="">contact</a>
 			</li>
-		</ul>
 	</nav>
 
 	<h1>
@@ -40,7 +39,7 @@
 		<br>
 		visibility: hidden-ის დროს კი ადგილზე რჩება
 	</div>
-
+<script src="script.js"></script>
 </body>
 
 </html>
