--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 		<br>
 		visibility: hidden-ის დროს კი ადგილზე რჩება
 	</div>
+	<div id="kote"></div>
 <script src="script.js"></script>
 </body>
 
